--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@testing-library/user-event": "^12.1.10",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
+    "axios": "^0.25.0",
     "date-fns": "^2.28.0",
     "firebase": "^9.6.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-dropzone-uploader": "^2.11.0",
     "react-hook-form": "^7.24.1",
+    "react-json-view": "^1.21.3",
     "react-query": "^3.34.8",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
