--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "axios": "^0.25.0",
     "date-fns": "^2.28.0",
     "firebase": "^9.6.3",
+    "mobx": "^6.5.0",
+    "mobx-react-lite": "^3.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-dropzone-uploader": "^2.11.0",
